Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81400

[REG->5.12] Reopening Quick window on another screen crashes application.

XMLWordPrintable

    • Windows
    • Bug Fixing Week Q2/2020

      User has found a way to crash application if new window is created, moved to another screen, closed there and tried to reopen.

      Support has tested the example and it crashes the app.

      Steps to reproduce the crash with the attached example project:
      Begin application.
      Click the first button
      Move the newly created window to a different display
      Close it, but with the native "X" in the window Top Right corner.
      ("Close it" button does not seem to trigger a fatal.)
      Click the first button (again)
      Note assert

      File: kernel\qplatformwindow.cpp
      Line: 767
      ASSERT: "!d->updateTimer.isActive()" in file kernel\qplatformwindow.cpp, line 767
      

        1. INC-1320217.zip
          8 kB
          Tero Pelkonen
        2. qtbug81400_diag.diff
          2 kB
          Friedemann Kleint
        3. qtbug81400_log.txt
          5 kB
          Friedemann Kleint
        4. qtbug81400_stack.txt
          31 kB
          Friedemann Kleint
        5. qtbug81400.zip
          3 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            tero.pelkonen Tero Pelkonen
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes